--- a/index.html
+++ b/index.html
@@ -356,17 +356,12 @@
             }
 
             else if (input1_letter == "C" && input2_letter == "A") {
-                frameElement.src = "https://cat.wikipedia.org/";
+                frameElement.src = "https://ca.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "G" && input2_letter == "L") {
-                frameElement.src = "https://gle.wikipedia.org/";
-                frameElement.style.display = "block";
-            }
-
-            else if (input1_letter == "A" && input2_letter == "S") {
-                frameElement.src = "https://ast.wikipedia.org/";
+                frameElement.src = "https://ga.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -376,7 +371,7 @@
             }
 
             else if (input1_letter == "C" && input2_letter == "Y") {
-                frameElement.src = "https://cym.wikipedia.org/";
+                frameElement.src = "https://cy.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -397,72 +392,72 @@
             }
 
             else if (input1_letter == "F" && input2_letter == "O") {
-                frameElement.src = "https://fos.wikipedia.org/";
+                frameElement.src = "https://fo.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "G" && input2_letter == "A") {
-                frameElement.src = "https://gal.wikipedia.org/";
+                frameElement.src = "https://gl.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "G" && input2_letter == "U") {
-                frameElement.src = "https://guj.wikipedia.org/";
+                frameElement.src = "https://gu.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "I" && input2_letter == "S") {
-                frameElement.src = "https://isl.wikipedia.org/";
+                frameElement.src = "https://is.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "K" && input2_letter == "N") {
-                frameElement.src = "https://kan.wikipedia.org/";
+                frameElement.src = "https://kn.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "K" && input2_letter == "M") {
-                frameElement.src = "https://kmr.wikipedia.org/";
+                frameElement.src = "https://ku.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "M" && input2_letter == "R") {
-                frameElement.src = "https://mar.wikipedia.org/";
+                frameElement.src = "https://mr.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "M" && input2_letter == "Y") {
-                frameElement.src = "https://mya.wikipedia.org/";
+                frameElement.src = "https://my.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "N" && input2_letter == "E") {
-                frameElement.src = "https://nep.wikipedia.org/";
+                frameElement.src = "https://ne.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "O" && input2_letter == "C") {
-                frameElement.src = "https://oci.wikipedia.org/";
+                frameElement.src = "https://oc.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "P" && input2_letter == "A") {
-                frameElement.src = "https://pan.wikipedia.org/";
+                frameElement.src = "https://pa.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "S" && input2_letter == "I") {
-                frameElement.src = "https://sin.wikipedia.org/";
+                frameElement.src = "https://si.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "S" && input2_letter == "W") {
-                frameElement.src = "https://swa.wikipedia.org/";
+                frameElement.src = "https://sw.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "T" && input2_letter == "G") {
-                frameElement.src = "https://tgl.wikipedia.org/";
+                frameElement.src = "https://tl.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -523,7 +518,7 @@
             }
 
             else if (input1_letter == "K" && input2_letter == "Y") {
-                frameElement.src = "https://kyr.wikipedia.org/";
+                frameElement.src = "https://ky.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -583,22 +578,22 @@
             }
 
             else if (input1_letter == "T" && input2_letter == "K") {
-                frameElement.src = "https://tkm.wikipedia.org/";
+                frameElement.src = "https://tk.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "T" && input2_letter == "T") {
-                frameElement.src = "https://tat.wikipedia.org/";
+                frameElement.src = "https://tt.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "U" && input2_letter == "G") {
-                frameElement.src = "https://uig.wikipedia.org/";
+                frameElement.src = "https://ug.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "U" && input2_letter == "Z") {
-                frameElement.src = "https://uzb.wikipedia.org/";
+                frameElement.src = "https://uz.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -796,6 +791,107 @@
 
             else if (input1_letter == "Z" && input2_letter == "A") {
                 frameElement.src = "https://zea.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            // Adding final batch of languages
+            else if (input1_letter == "A" && input2_letter == "B") {
+                frameElement.src = "https://ab.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "B" && input2_letter == "O") {
+                frameElement.src = "https://bo.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "C" && input2_letter == "R") {
+                frameElement.src = "https://cr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "D" && input2_letter == "Z") {
+                frameElement.src = "https://dz.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "F" && input2_letter == "F") {
+                frameElement.src = "https://ff.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "G" && input2_letter == "N") {
+                frameElement.src = "https://gn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "T") {
+                frameElement.src = "https://ht.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "I" && input2_letter == "U") {
+                frameElement.src = "https://iu.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "I") {
+                frameElement.src = "https://ki.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "K" && input2_letter == "L") {
+                frameElement.src = "https://kl.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "L" && input2_letter == "N") {
+                frameElement.src = "https://ln.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "M" && input2_letter == "T") {
+                frameElement.src = "https://mt.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "N") {
+                frameElement.src = "https://nn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "O" && input2_letter == "S") {
+                frameElement.src = "https://os.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "P" && input2_letter == "N") {
+                frameElement.src = "https://pn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "R" && input2_letter == "N") {
+                frameElement.src = "https://rn.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "G") {
+                frameElement.src = "https://sg.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "M") {
+                frameElement.src = "https://sm.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "T") {
+                frameElement.src = "https://st.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "T" && input2_letter == "I") {
+                frameElement.src = "https://ti.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
