--- a/index.html
+++ b/index.html
@@ -361,12 +361,12 @@
             }
 
             else if (input1_letter == "G" && input2_letter == "L") {
-                frameElement.src = "https://ga.wikipedia.org/";
+                frameElement.src = "https://gd.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "B" && input2_letter == "R") {
-                frameElement.src = "https://bre.wikipedia.org/";
+                frameElement.src = "https://br.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -377,12 +377,12 @@
 
             // Adding more languages
             else if (input1_letter == "A" && input2_letter == "M") {
-                frameElement.src = "https://amh.wikipedia.org/";
+                frameElement.src = "https://am.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "B" && input2_letter == "E") {
-                frameElement.src = "https://bel.wikipedia.org/";
+                frameElement.src = "https://be.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -462,12 +462,12 @@
             }
 
             else if (input1_letter == "W" && input2_letter == "A") {
-                frameElement.src = "https://war.wikipedia.org/";
+                frameElement.src = "https://wa.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "Y" && input2_letter == "I") {
-                frameElement.src = "https://yid.wikipedia.org/";
+                frameElement.src = "https://yi.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -478,42 +478,42 @@
             }
 
             else if (input1_letter == "B" && input2_letter == "H") {
-                frameElement.src = "https://bho.wikipedia.org/";
+                frameElement.src = "https://bh.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "C" && input2_letter == "O") {
-                frameElement.src = "https://cor.wikipedia.org/";
+                frameElement.src = "https://kw.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "D" && input2_letter == "V") {
-                frameElement.src = "https://dve.wikipedia.org/";
+                frameElement.src = "https://dv.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "F" && input2_letter == "Y") {
-                frameElement.src = "https://fry.wikipedia.org/";
+                frameElement.src = "https://fy.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "G" && input2_letter == "D") {
-                frameElement.src = "https://gla.wikipedia.org/";
+                frameElement.src = "https://gd.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "I" && input2_letter == "O") {
-                frameElement.src = "https://ido.wikipedia.org/";
+                frameElement.src = "https://io.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "J" && input2_letter == "V") {
-                frameElement.src = "https://jav.wikipedia.org/";
+                frameElement.src = "https://jv.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "K" && input2_letter == "S") {
-                frameElement.src = "https://kas.wikipedia.org/";
+                frameElement.src = "https://ks.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -523,57 +523,57 @@
             }
 
             else if (input1_letter == "L" && input2_letter == "A") {
-                frameElement.src = "https://lat.wikipedia.org/";
+                frameElement.src = "https://la.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "L" && input2_letter == "I") {
-                frameElement.src = "https://lim.wikipedia.org/";
+                frameElement.src = "https://li.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "L" && input2_letter == "O") {
-                frameElement.src = "https://lao.wikipedia.org/";
+                frameElement.src = "https://lo.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "M" && input2_letter == "G") {
-                frameElement.src = "https://mlg.wikipedia.org/";
+                frameElement.src = "https://mg.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "M" && input2_letter == "N") {
-                frameElement.src = "https://mon.wikipedia.org/";
+                frameElement.src = "https://mn.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "O" && input2_letter == "R") {
-                frameElement.src = "https://ori.wikipedia.org/";
+                frameElement.src = "https://or.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "P" && input2_letter == "S") {
-                frameElement.src = "https://pus.wikipedia.org/";
+                frameElement.src = "https://ps.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "Q" && input2_letter == "U") {
-                frameElement.src = "https://que.wikipedia.org/";
+                frameElement.src = "https://qu.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "S" && input2_letter == "A") {
-                frameElement.src = "https://san.wikipedia.org/";
+                frameElement.src = "https://sa.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "S" && input2_letter == "O") {
-                frameElement.src = "https://som.wikipedia.org/";
+                frameElement.src = "https://so.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "S" && input2_letter == "U") {
-                frameElement.src = "https://sun.wikipedia.org/";
+                frameElement.src = "https://su.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
@@ -598,22 +598,22 @@
             }
 
             else if (input1_letter == "V" && input2_letter == "O") {
-                frameElement.src = "https://vol.wikipedia.org/";
+                frameElement.src = "https://vo.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "W" && input2_letter == "O") {
-                frameElement.src = "https://wol.wikipedia.org/";
+                frameElement.src = "https://wo.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "X" && input2_letter == "H") {
-                frameElement.src = "https://xho.wikipedia.org/";
+                frameElement.src = "https://xh.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
             else if (input1_letter == "Y" && input2_letter == "O") {
-                frameElement.src = "https://yor.wikipedia.org/";
+                frameElement.src = "https://yo.wikipedia.org/";
                 frameElement.style.display = "block";
             }
 
