--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
 
         function goHome() {
             const frameElement = document.getElementById("displayedFrame");
-            frameElement.src = "https://meta.wikimedia.org/wiki/List_of_Wikipedias#All_Wikipedias_ordered_by_number_of_articles";
+            frameElement.src = "";
             frameElement.style.display = "block";
         }
     </script>
