--- a/index.html
+++ b/index.html
@@ -905,6 +905,8 @@
             const frameElement = document.getElementById("displayedFrame");
             frameElement.src = "";
             frameElement.style.display = "block";
+            charInput1.value = "";
+            charInput2.value = "";
         }
     </script>
 
