--- a/index.html
+++ b/index.html
@@ -794,6 +794,57 @@
                 frameElement.style.display = "block";
             }
 
+            // Adding missing three-letter codes
+            else if (input1_letter == "W" && input2_letter == "U") {
+                frameElement.src = "https://wuu.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "S") {
+                frameElement.src = "https://hsb.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "P" && input2_letter == "D") {
+                frameElement.src = "https://pdc.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "S" && input2_letter == "Z") {
+                frameElement.src = "https://szl.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "H" && input2_letter == "K") {
+                frameElement.src = "https://hak.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "D") {
+                frameElement.src = "https://nds.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "Y" && input2_letter == "U") {
+                frameElement.src = "https://yue.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "N" && input2_letter == "P") {
+                frameElement.src = "https://nap.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "F" && input2_letter == "R") {
+                frameElement.src = "https://frr.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
+            else if (input1_letter == "V" && input2_letter == "L") {
+                frameElement.src = "https://vls.wikipedia.org/";
+                frameElement.style.display = "block";
+            }
+
             // Adding final batch of languages
             else if (input1_letter == "A" && input2_letter == "B") {
                 frameElement.src = "https://ab.wikipedia.org/";
