--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div>
         <input type="text" placeholder="e" id="charInput1" maxlength="1">
         <input type="text" placeholder="n" id="charInput2" maxlength="1">
-        <button onclick="displayContent()" id="submitButton">.wikipedia.org</button>
+        <button onclick="displayContent()" id="submitButton">enter</button>
     </div>
 
     <!-- IFRAME TO DISPLAY -->
