--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <body>
     <button onclick="history.back()" id="backButton">back</button>
-    <button onclick="goHome()" id="homeButton">clear</button>
+    <button onclick="goHome()" id="homeButton">refresh</button>
     <div>
         <input type="text" placeholder="e" id="charInput1" maxlength="1">
         <input type="text" placeholder="n" id="charInput2" maxlength="1">
